criei um site para o grupo sul-coreano Twice

--- a/funcao.html
+++ b/funcao.html
@@ -11,6 +11,7 @@
     <h1>Função de cada uma das Membros do Twice</h1>
     </header>
 <div class="box1">
+    <article>
     <ul>
         <li>Nayeon - vocalista líder,  dancer líder e center</li>
         <li>Jeongyeon - vocalista líder</li>
@@ -22,6 +23,7 @@
         <li>Chaeyoung - rapper principal e vocalista</li>
         <li>Tzuyu - visual dançarina líder e vocalista</li>
     </ul>
+    </article>
     </div>
     <footer>
         
