--- a/idade.html
+++ b/idade.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="idade.css">
 </head>
 <body>
+    <header>
     <h1>Idade das Membros do twice</h1>
+</header> 
+    <main>
+        <article>
     <div class="box2">
     <ul>
         <li>Nayeon - 28 anos</li>
@@ -21,6 +25,8 @@
         <li>Tzuyu - 24 anos</li>
     </ul>
 </div>
+</article>
+</main>
     <footer>
         <div>
             <nav>
