--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>história do Twice</h1>
         <main>
-            
+            <article>
         <div>
             <p>O Twice é um grupo que foi formado no reality show Sixteen, criado pela JYP Entertainment,
                  uma empresa sul-coreana de entretenimento que funciona também como gravadora,
@@ -20,6 +20,7 @@
         <div>
             <img src="twice.jpeg" alt="twice">
             </div>
+        </article>
         </main>
 
       <h2>Aqui estão algumas curiosidades sobre o grupo:</h2>
